auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d943831",
+   "id": "4b6a96da",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84cc0974",
    "metadata": {},
    "source": [
     "# About\n",
@@ -51,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1b9d91",
+   "id": "d0d64fe7",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e177018a",
+   "id": "1651fe54",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6aae6e6",
+   "id": "19903737",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5107e474",
+   "id": "025d909e",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -143,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.336994,
+  "date": 1764309074.4798622,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
