--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "67577a02",
+   "id": "05f2e81a",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27e09992",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f69a35f3",
+   "id": "f448e0e7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27def3dd",
+   "id": "6647c6e9",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b7b3ed",
+   "id": "7c0ae71f",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e305d50f",
+   "id": "74e3e7ee",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f45e8a",
+   "id": "8de71ac0",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13123cfb",
+   "id": "5027747c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1197f07a",
+   "id": "229dc51a",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b5cbe5",
+   "id": "1d3224a6",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398eae68",
+   "id": "bbd58fd0",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfca56be",
+   "id": "d04ce64c",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6950b65e",
+   "id": "ff979654",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bae15a19",
+   "id": "ac6ad1fc",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -197,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e018b3d",
+   "id": "acba0898",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cbadac5",
+   "id": "b41e35e0",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -233,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f4eb3d",
+   "id": "1cdafbad",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e61abb6",
+   "id": "acec809a",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -265,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0c08fe",
+   "id": "5c766cbf",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398f9656",
+   "id": "b5a55d2e",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "369a1a90",
+   "id": "ea7873f9",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -340,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ee8651",
+   "id": "15becfdd",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da20be8f",
+   "id": "f82a63c2",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0a5c31",
+   "id": "3fce040a",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -387,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49446c4e",
+   "id": "d9d75096",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb455e49",
+   "id": "0a3f9e45",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -407,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc465b6",
+   "id": "50354019",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93227a4",
+   "id": "f975f25b",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -438,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b04f7a3c",
+   "id": "ad78668a",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465d3763",
+   "id": "5f0c2918",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -477,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad1729b",
+   "id": "60108a3b",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16eb72c6",
+   "id": "7540a2fb",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -505,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2418b188",
+   "id": "ee30bb1b",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fc9ed27",
+   "id": "75f8ce10",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -563,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180b2b34",
+   "id": "f9352aae",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd88b85",
+   "id": "9a095e12",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -599,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a1d2fb",
+   "id": "d2884311",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67fb954",
+   "id": "8844609e",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -631,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c5c3b11",
+   "id": "a002ca3a",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b5b2edb",
+   "id": "07536bf3",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -673,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d106fe6",
+   "id": "7a95bb0f",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980f1f1b",
+   "id": "cb696e3d",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e17746d",
+   "id": "24264ce7",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57dc0b28",
+   "id": "efde5a90",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "984508a8",
+   "id": "8787d542",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f823c87d",
+   "id": "4648f863",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae677b3f",
+   "id": "54055e48",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -772,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118f6f88",
+   "id": "2e1708e0",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec08da6b",
+   "id": "5b3d4ede",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -816,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edb32cc",
+   "id": "555e0656",
    "metadata": {
     "hide-output": false
    },
@@ -828,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99df082",
+   "id": "36daa0ca",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "612c986a",
+   "id": "291ab399",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -852,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca871240",
+   "id": "2452b113",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8900646",
+   "id": "07dfd94d",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -872,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fe7c43",
+   "id": "352800f6",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e44c05",
+   "id": "dda4dc7b",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -920,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "911df569",
+   "id": "29d3d7a2",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb22944",
+   "id": "1e1c867d",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bf0cb53",
+   "id": "fac6faa6",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a54281",
+   "id": "e3a4a77f",
    "metadata": {
     "hide-output": false
    },
@@ -982,7 +993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cba91a6",
+   "id": "0fb16d29",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1001,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad8c6ba",
+   "id": "82cd3377",
    "metadata": {
     "hide-output": false
    },
@@ -1026,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbff6606",
+   "id": "b11a8fd4",
    "metadata": {
     "hide-output": false
    },
@@ -1043,7 +1054,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c632e21",
+   "id": "ac089743",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1055,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "684cba0b",
+   "id": "fcb10b0e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1063,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b06dd15c",
+   "id": "30ef749c",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1080,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ffde66b",
+   "id": "36641146",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1089,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43532671",
+   "id": "777d8f3f",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee62e138",
+   "id": "17ca6c52",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1109,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369c7d95",
+   "id": "a5bc5a77",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f26958e1",
+   "id": "4fa0d2f1",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48cde77",
+   "id": "ebaea434",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1148,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450ae297",
+   "id": "48f31ad2",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1161,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a710dc2",
+   "id": "2afc3022",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae56f9ff",
+   "id": "34b8bc29",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1181,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d36c7c61",
+   "id": "0bd3e0eb",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1362bde9",
+   "id": "f6d5c7fd",
    "metadata": {
     "hide-output": false
    },
@@ -1215,7 +1226,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.371989,
+  "date": 1764309074.5176818,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
