--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ffd0376",
+   "id": "fed69c01",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "609a44e1",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f41b15d",
+   "id": "2550d04d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3dc037e",
+   "id": "99b7f68a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6da3b282",
+   "id": "a5a28d47",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e313af",
+   "id": "1d6d06ff",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -78,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9abca6e7",
+   "id": "5456340e",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae49f96b",
+   "id": "2502075f",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd010bd6",
+   "id": "831e5219",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -122,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8d4693",
+   "id": "18368e46",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6efa740",
+   "id": "40a74797",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -168,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5fe010e",
+   "id": "8e195477",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -180,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc823dc9",
+   "id": "5d7bc37a",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1866bb02",
+   "id": "1e9b0edb",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -219,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "878141ab",
+   "id": "0456142a",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb76d1ac",
+   "id": "d7791bf2",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "932d3a69",
+   "id": "f71913ea",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -256,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a060a85c",
+   "id": "f5d3d4c4",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8395ac00",
+   "id": "0e0fdd8c",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -277,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf44253a",
+   "id": "91080206",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb14461f",
+   "id": "9368604e",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -297,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b3c6bda",
+   "id": "d6b9f289",
    "metadata": {
     "hide-output": false
    },
@@ -309,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "583528a4",
+   "id": "ab54d550",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7104f44d",
+   "id": "fe3006df",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -335,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c07c7392",
+   "id": "975df031",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de546bf",
+   "id": "8a5e1c91",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb826dd",
+   "id": "5f6a6650",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ffbd63b",
+   "id": "fc084651",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -384,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b7cacd7",
+   "id": "10878341",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a4f9545",
+   "id": "5ba2bcf9",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -406,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5cbdcb",
+   "id": "8f54a574",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a7c0f02",
+   "id": "9ea6dbf1",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272fa3db",
+   "id": "2fe27a79",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13ea65e",
+   "id": "44957a48",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "388ca275",
+   "id": "cf04919a",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -477,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c12c45",
+   "id": "92516269",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd3eed50",
+   "id": "19296e8b",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df2ee508",
+   "id": "8a8bfa5e",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e6147c",
+   "id": "cc3a7a7d",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8655608a",
+   "id": "59908d02",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -544,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9527cea0",
+   "id": "8f42362b",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -555,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f58fe8",
+   "id": "9c9e533a",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d41176d5",
+   "id": "4432a245",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -607,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "559f7937",
+   "id": "de283cf0",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b1ffa2",
+   "id": "3bc11549",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719590a3",
+   "id": "805a555c",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -649,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72bdf2a2",
+   "id": "8edf177f",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d20d56",
+   "id": "08014a7b",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25bda161",
+   "id": "c670dd11",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e37b3be",
+   "id": "7b29a616",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -705,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b93e207c",
+   "id": "dc1771ca",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77870d04",
+   "id": "3c271543",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -729,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863b8a79",
+   "id": "12ecb05a",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9494280f",
+   "id": "8b89626b",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -751,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e6e6fd",
+   "id": "ac53f818",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8020897",
+   "id": "88927178",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -776,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6578df9a",
+   "id": "e2d44b59",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -789,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b021a5ea",
+   "id": "fbf74774",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bddc64f",
+   "id": "7debee5e",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -815,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b7ae9e",
+   "id": "7c7d3373",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34e4a35",
+   "id": "feb29248",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -842,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd35cafb",
+   "id": "23002dea",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -872,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb01e10",
+   "id": "9f7d548c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -883,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a638a8e6",
+   "id": "6d98eb4b",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2dd3ef",
+   "id": "ce4313e8",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +929,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.5393722,
+  "date": 1764309074.6779401,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
