--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "56cb1f2d",
+   "id": "7fa5342f",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78948b13",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b093ef",
+   "id": "c322e863",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12116b0",
+   "id": "780c1f31",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdc72dc",
+   "id": "d2a3b87d",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5975a6d",
+   "id": "3bbb766c",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea709197",
+   "id": "ba14441e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -81,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5af0444",
+   "id": "411b7348",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2107b8",
+   "id": "86926455",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -101,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6f51a2",
+   "id": "ce1a5114",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bf86ca2",
+   "id": "bd86aae8",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -158,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73c07ba4",
+   "id": "53e032c9",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f945a38d",
+   "id": "4d267b5f",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -212,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8988538f",
+   "id": "e2efdc06",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4ca3908",
+   "id": "f7560367",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -397,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da32708",
+   "id": "831171de",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa32b445",
+   "id": "0703e245",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -464,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7782d01",
+   "id": "ee94bc94",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e48de68f",
+   "id": "7bc65f42",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -484,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a077f6e",
+   "id": "532df27d",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44846857",
+   "id": "1ed44fbb",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -546,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d43885",
+   "id": "31d36f8a",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "206ca6e6",
+   "id": "6244c7e3",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be284971",
+   "id": "06538b5a",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -653,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37054ec",
+   "id": "7e8bf580",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -662,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c7f43c2",
+   "id": "588e4d3e",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd39a2ae",
+   "id": "bf7e3cdf",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -682,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e669db0",
+   "id": "9220d4a9",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f99124",
+   "id": "5f3e11ed",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -704,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e130c05",
+   "id": "8f829b5d",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41111527",
+   "id": "21337140",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -726,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f35eb66",
+   "id": "a6752b0a",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90442469",
+   "id": "f5cc36c8",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -767,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b1638d",
+   "id": "258e08f2",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc4a477e",
+   "id": "9426c526",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce786b44",
+   "id": "4883df84",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0e4733",
+   "id": "0d4b25f7",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -821,7 +832,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.6110556,
+  "date": 1764309074.7457616,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
