--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6bb2936",
+   "id": "8408e774",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "883cb3fa",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c013c8e9",
+   "id": "fe80b351",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6748bf29",
+   "id": "63ef350c",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a396db8",
+   "id": "e9fbfd33",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66918c95",
+   "id": "573e8967",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f93b3f9",
+   "id": "5548a605",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,19 +89,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b296c8",
+   "id": "fc974940",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
     "\n",
     "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)\n",
     "- [Simple Neural Network Regression with Keras and JAX](https://jax.quantecon.org/keras.html)\n",
-    "- [Neural Network Regression with JAX and Optax](https://jax.quantecon.org/jax_nn.html)"
+    "- [Neural Network Regression with JAX](https://jax.quantecon.org/jax_nn.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "77e0c93a",
+   "id": "93574b6e",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -102,7 +113,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.6237662,
+  "date": 1764309074.7579,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
