--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "21f6e01d",
+   "id": "eebfab39",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdb16ac7",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8165643",
+   "id": "f2aa40a6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17cabce1",
+   "id": "1b71cae7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a57288",
+   "id": "9594cd74",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101f0cc6",
+   "id": "b213785a",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -85,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ac44288",
+   "id": "367cb829",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "711dfb88",
+   "id": "f2b4d295",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -134,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c792ad0a",
+   "id": "f30ee4d1",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89adf43f",
+   "id": "cff5e4e0",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -178,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce8651e",
+   "id": "df987589",
    "metadata": {
     "hide-output": false
    },
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8321819",
+   "id": "ecd172c3",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -225,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95541972",
+   "id": "4b9e9f1a",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a3b83b6",
+   "id": "6fd24f2c",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -260,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c2d6a9",
+   "id": "0d9bcae5",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2c3e9b4",
+   "id": "0d02954c",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -284,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd6b71a",
+   "id": "02df7a61",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45406715",
+   "id": "45a52a85",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -308,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c65e0c",
+   "id": "da34f586",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372d8afb",
+   "id": "81ba1d06",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -332,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ebe13b2",
+   "id": "5be3fc79",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562b9157",
+   "id": "438ab23d",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -365,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cdffae5",
+   "id": "da960f23",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f54da5",
+   "id": "52f80d3f",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -418,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f47217c6",
+   "id": "97f06615",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e773ec",
+   "id": "0309a08e",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -442,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58b61185",
+   "id": "9f397f40",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dabf9ee7",
+   "id": "a3292364",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -468,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ded9ed8",
+   "id": "b4d48c79",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -484,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba907420",
+   "id": "c4a37cf1",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc4cf6c",
+   "id": "0ac3ca3b",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -521,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d398a9b",
+   "id": "94c13281",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff61ad8",
+   "id": "027e2ba1",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -547,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2b2fbc",
+   "id": "18702c93",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0688da6",
+   "id": "962c5ec5",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -588,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a06802",
+   "id": "5172cbb7",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -607,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19588c57",
+   "id": "f8a4b50c",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -618,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4fe3f1a",
+   "id": "216e8704",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "913b053c",
+   "id": "7b16b5c1",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "457e6da9",
+   "id": "15a819da",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -685,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f16383",
+   "id": "1125547d",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3dce3e3",
+   "id": "b2164b27",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "044a17bd",
+   "id": "0c60eee3",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -722,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ee409dc",
+   "id": "aa6f4eb2",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -733,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7abd91e0",
+   "id": "fcdb4cea",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f899a9ac",
+   "id": "63511ba0",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -786,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28a2e2e4",
+   "id": "34c072b2",
    "metadata": {
     "hide-output": false
    },
@@ -800,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45d77807",
+   "id": "17e924d5",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -809,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bde005bb",
+   "id": "1f5820c7",
    "metadata": {
     "hide-output": false
    },
@@ -824,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ee52894",
+   "id": "e9bf82b7",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +846,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.646491,
+  "date": 1764309074.7801166,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
