--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5847584a",
+   "id": "7b30eeb8",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddfeb719",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a62a5a5",
+   "id": "1a274d7d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6dcab78",
+   "id": "d320b571",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7122d9",
+   "id": "1f2a2ba7",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15560a07",
+   "id": "074ff71d",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -193,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a98e3c",
+   "id": "191902f9",
    "metadata": {
     "hide-output": false
    },
@@ -211,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec368bbc",
+   "id": "54813319",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -220,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658d6e9f",
+   "id": "47e059f9",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "633978e0",
+   "id": "1e16e1f0",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -240,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "713bba58",
+   "id": "56f55364",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "402fe3dc",
+   "id": "ca3598f0",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -260,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e637fd27",
+   "id": "b04f710b",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02c63473",
+   "id": "324adf06",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c2a4a5",
+   "id": "203f1031",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -329,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "301379b1",
+   "id": "a2e9e8d5",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "454606af",
+   "id": "792c8ac3",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -379,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8e89145",
+   "id": "c5b99257",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f72b9880",
+   "id": "6964fd27",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -400,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f155183",
+   "id": "3133cc11",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7c4ecc",
+   "id": "2e95da76",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -426,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d327bcdf",
+   "id": "82020f0a",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "940e775a",
+   "id": "ab90dc37",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -452,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5692a2d8",
+   "id": "0b795e36",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0964912c",
+   "id": "af67e16d",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -492,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a925124",
+   "id": "b960e3e7",
    "metadata": {
     "hide-output": false
    },
@@ -508,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d23e6c",
+   "id": "347e30f5",
    "metadata": {
     "hide-output": false
    },
@@ -526,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bb7cba",
+   "id": "b6b53d79",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -535,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f009c6b8",
+   "id": "63ef3d66",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d667f4c",
+   "id": "fa423faf",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -564,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d5bbbea",
+   "id": "c0c33d03",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a2a9b5",
+   "id": "e7b76bfc",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -586,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e6ad96d",
+   "id": "7fb58173",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2277b6",
+   "id": "fa8e7417",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -618,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d8fa01",
+   "id": "8e01e2d2",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c324929a",
+   "id": "01e98c8a",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -659,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b94cbb5",
+   "id": "6d459f70",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +681,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.6656075,
+  "date": 1764309074.7988806,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
