--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d5224d2",
+   "id": "88d008f3",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6daca1fa",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3698ce0f",
+   "id": "e9b27929",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e99a919f",
+   "id": "af14b9ab",
    "metadata": {
     "hide-output": false
    },
@@ -57,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f79bde",
+   "id": "1bafc454",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -66,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc954ade",
+   "id": "6ce86e24",
    "metadata": {
     "hide-output": false
    },
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34702d54",
+   "id": "8aa72ecf",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -86,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "760a2d18",
+   "id": "59b62103",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5632a70b",
+   "id": "5365f727",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -109,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f3f3af",
+   "id": "595ce1d7",
    "metadata": {
     "hide-output": false
    },
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4e2b680",
+   "id": "42d21017",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -150,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debcbf29",
+   "id": "f645ac85",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a1a355",
+   "id": "fb63ebb0",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -181,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78d67175",
+   "id": "a0b90d2f",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b9d6a0",
+   "id": "8ac31ade",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -201,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b43bf98",
+   "id": "5c99897d",
    "metadata": {
     "hide-output": false
    },
@@ -216,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acf47bbe",
+   "id": "eadad782",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -225,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65967c25",
+   "id": "64dca7d6",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "556adb54",
+   "id": "c5f454c3",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -246,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5596d36b",
+   "id": "04179463",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -263,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbdd1d1",
+   "id": "9e4e0a19",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12783b50",
+   "id": "982dd0ec",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -298,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2b24655",
+   "id": "d70ac649",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -310,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1726a4f",
+   "id": "07e0129c",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48322e4e",
+   "id": "4107bdd7",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -347,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a7b672",
+   "id": "46579840",
    "metadata": {
     "hide-output": false
    },
@@ -371,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeda0ebf",
+   "id": "22cc371b",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608a1172",
+   "id": "0b9e29ba",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -392,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa0938d9",
+   "id": "6aa956c4",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d2d336",
+   "id": "699aa78f",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -412,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "238ed7bf",
+   "id": "9b544fab",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5568bcb",
+   "id": "7e0fa132",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -434,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42bc914b",
+   "id": "59054d63",
    "metadata": {
     "hide-output": false
    },
@@ -447,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d9e8e8a",
+   "id": "86484d8a",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -456,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9024bf",
+   "id": "93de1256",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c75dfe6d",
+   "id": "e0dcdf85",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -477,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c3b7eaa",
+   "id": "62f0a192",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "222a74c6",
+   "id": "7ebfb452",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -497,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b197c27",
+   "id": "30fb5454",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d456a6dc",
+   "id": "8a581888",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -521,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec1ef90e",
+   "id": "7f727c58",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f63c0ee",
+   "id": "bbf9ab86",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -547,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6094bcb",
+   "id": "83da5051",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f115763",
+   "id": "4c15df93",
    "metadata": {
     "hide-output": false
    },
@@ -573,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "889f49a9",
+   "id": "b2afe955",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca75fd46",
+   "id": "4de8e100",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -595,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c63e3e",
+   "id": "bceabd4b",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1249a900",
+   "id": "8b6692d5",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -619,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3262838",
+   "id": "5b8a087b",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eed12f6",
+   "id": "2cf484e1",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "065c87d1",
+   "id": "f0501f98",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dbc9505",
+   "id": "6edcd4c6",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -670,7 +681,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.8021538,
+  "date": 1764309074.9324768,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
