--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3caa496d",
+   "id": "070b07d5",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91c352d7",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61cab03",
+   "id": "9ac8c94f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20428a94",
+   "id": "a776137b",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d0b356e",
+   "id": "d1581575",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -62,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8e7dbb",
+   "id": "d350dee4",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e46d0398",
+   "id": "e62453d9",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -90,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ac1a6e",
+   "id": "7c8df7c6",
    "metadata": {
     "hide-output": false
    },
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b41132",
+   "id": "67f35963",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c3bfc8",
+   "id": "3f7ce612",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1bbd23",
+   "id": "45f03ba5",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7126166",
+   "id": "2039b6a8",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -236,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a237d6",
+   "id": "9dd98ace",
    "metadata": {
     "hide-output": false
    },
@@ -254,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f30c3aca",
+   "id": "f95d9b36",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -264,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa30b74",
+   "id": "30ddf90e",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cafad15a",
+   "id": "7c4bd384",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -292,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337aa92c",
+   "id": "a98813db",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "076671f3",
+   "id": "9fc7b7f9",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -333,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "716c6e19",
+   "id": "34930527",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a9461bd",
+   "id": "4cd6bff8",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -356,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72a00da8",
+   "id": "d43b3557",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "368b9bfd",
+   "id": "1d8d3a55",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -378,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b7a1e0",
+   "id": "50b45177",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c2d5fa",
+   "id": "05c885aa",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -404,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd8fc51d",
+   "id": "df4e09d0",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -425,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b51e977f",
+   "id": "ad3011e1",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6010c9e8",
+   "id": "6b3b6a00",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -475,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc7f736",
+   "id": "c1d7c32a",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a19ef336",
+   "id": "6685ac9b",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14d34425",
+   "id": "0f2ade37",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -511,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793032ff",
+   "id": "e6d34d6f",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6d6d9e",
+   "id": "008645a8",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -537,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca71a093",
+   "id": "e5d5dac7",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -553,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdfe7b7",
+   "id": "e6d244a5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -562,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49755ba0",
+   "id": "0478e6b2",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37f2ea17",
+   "id": "5cc2b575",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -608,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77ba6d76",
+   "id": "f0db84fe",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f683952d",
+   "id": "a0568dcf",
    "metadata": {
     "hide-output": false
    },
@@ -635,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84a23f62",
+   "id": "6e278e34",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -650,7 +661,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.8247006,
+  "date": 1764309074.954112,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
