--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ce045d5",
+   "id": "e96b8fdc",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "467c673a",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "820705c7",
+   "id": "cf96227e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c540b7af",
+   "id": "fa0891d4",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28090129",
+   "id": "562c3083",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14064087",
+   "id": "0010e545",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1142ad82",
+   "id": "b7c583eb",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb5ec07",
+   "id": "3fa8aa6d",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -85,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8b569ec",
+   "id": "f49d02ce",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3462275f",
+   "id": "ccaf924a",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3bf714a",
+   "id": "5d15edef",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -133,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723879f3",
+   "id": "10439cfd",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c86a34e",
+   "id": "cb4e60dd",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -157,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d209b5d2",
+   "id": "98f9f9ee",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7568a21",
+   "id": "db1769f7",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ea413b",
+   "id": "15b34b48",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -226,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c28ac54",
+   "id": "d2744f2d",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -252,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44cd164",
+   "id": "c4fd588b",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df3676c",
+   "id": "f31f1d4e",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -302,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd72225b",
+   "id": "620bf734",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b427901e",
+   "id": "137eab8b",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -326,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b01a230",
+   "id": "e4096250",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0398d9db",
+   "id": "a8a2eea4",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -360,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd7890ca",
+   "id": "6eb43878",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a789f1",
+   "id": "7920ad66",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -386,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b30e0a69",
+   "id": "37cdccb3",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f56ae6e6",
+   "id": "90b2917c",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -436,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db5fbbff",
+   "id": "a0a1f656",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "695e6169",
+   "id": "1ce73877",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -474,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "338ee2f9",
+   "id": "c214c029",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e35f07",
+   "id": "f4503e25",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -503,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9d2837f",
+   "id": "d7c95905",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81914d85",
+   "id": "cda1754e",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bbe0622",
+   "id": "a6998709",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -539,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc23e0a3",
+   "id": "baeabf05",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -584,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8934226",
+   "id": "1ecbfd9c",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -595,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7472724",
+   "id": "0a6b9857",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14d47424",
+   "id": "c87486b5",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -617,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27bef777",
+   "id": "7c0ba041",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80751dc2",
+   "id": "21b2736e",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -640,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e5c4f97",
+   "id": "6d164416",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4214748",
+   "id": "c37e1546",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -660,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a61087",
+   "id": "d5db561b",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e448b51",
+   "id": "867a1886",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -681,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ef2051",
+   "id": "dcb270f6",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93e69615",
+   "id": "afec82bc",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -709,7 +720,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.9511023,
+  "date": 1764309075.0772262,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
