--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53533fde",
+   "id": "3e5dc2b8",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "839a3786",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "757539e0",
+   "id": "6546047e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fdc2d00",
+   "id": "00830c26",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49abd38a",
+   "id": "1a17ea1d",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "902c9aa0",
+   "id": "adf2e652",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -69,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "747a3916",
+   "id": "437d003d",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3140fa0",
+   "id": "be7654d3",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -105,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9cc3d79",
+   "id": "e5be847f",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4ea63c",
+   "id": "802578a9",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -139,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0624adee",
+   "id": "494e3ab4",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0b72f0",
+   "id": "b90a899b",
    "metadata": {},
    "source": [
     "Here we go"
@@ -168,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44a9d30",
+   "id": "44ef0b9d",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a8d2d5",
+   "id": "21062732",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -187,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e3314af",
+   "id": "0ab3d31f",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -239,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf5ff5c",
+   "id": "7fb28cb4",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43208c77",
+   "id": "35ed2c51",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68de6198",
+   "id": "26157807",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -286,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b56ab1a",
+   "id": "feec2a8c",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81aa982",
+   "id": "3bfd0118",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -331,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777b12c7",
+   "id": "def4eb84",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d7eee68",
+   "id": "a2c8e3b9",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -362,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f1ce65",
+   "id": "489a6747",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "907dbdb4",
+   "id": "1a5a6c95",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -384,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c35bf12",
+   "id": "bab93208",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43a7e00e",
+   "id": "40615d81",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -405,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86e78212",
+   "id": "8fa60ea4",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2733a790",
+   "id": "c490239d",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -426,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e80d5aba",
+   "id": "d53652d1",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7424b64",
+   "id": "d2a9bfeb",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -447,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4875346",
+   "id": "7a6ff883",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03273de3",
+   "id": "c2b094a8",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -472,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf27663",
+   "id": "b76efdcc",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a39dd86",
+   "id": "46d9b0f8",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -492,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff41ea07",
+   "id": "173be9e7",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -552,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad276b35",
+   "id": "85ef1aa7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -563,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf87fc70",
+   "id": "95597b84",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab331c9",
+   "id": "5519767b",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -591,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993691c3",
+   "id": "736fcecc",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a04c16",
+   "id": "5da927cf",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -612,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9b087b8",
+   "id": "9c7e6c01",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67412618",
+   "id": "dd47a482",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -642,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a31d9bac",
+   "id": "42596f0c",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e06b5d1",
+   "id": "a3d91f5a",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -664,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36907f2",
+   "id": "5da012ee",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2e25a4",
+   "id": "ab0caf08",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ba5e29",
+   "id": "4d971b38",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -708,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9017edd9",
+   "id": "84f6ed91",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2627da47",
+   "id": "22c0d85b",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a342745a",
+   "id": "6ada8ea8",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -746,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2694141f",
+   "id": "0f1870ec",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -792,7 +803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4081f60",
+   "id": "aa07415d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -803,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a023d60c",
+   "id": "b06c196b",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6563e3",
+   "id": "3b72c278",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -831,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba938ce",
+   "id": "661225a7",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9497ecc",
+   "id": "588085e9",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -863,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9afd99db",
+   "id": "cea745d6",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa556ac8",
+   "id": "2d9fe587",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -882,7 +893,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.9797008,
+  "date": 1764309075.1045117,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
