--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce7c4ac1",
+   "id": "d16c561d",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4bdb61c",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b6287b",
+   "id": "8e3bbd79",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c94315d",
+   "id": "c0bdf89b",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e9b81a1",
+   "id": "3a16fff1",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cfa7f7",
+   "id": "3d266f83",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64962dc",
+   "id": "4abecd59",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba860cf8",
+   "id": "c3920a84",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017c9e04",
+   "id": "e4510901",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92703684",
+   "id": "53301190",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fcd8d96",
+   "id": "0301e6a5",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eeff53b",
+   "id": "1eda3086",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6e6afa",
+   "id": "d128c459",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba0788a7",
+   "id": "dbf36372",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "184acd9b",
+   "id": "d7e625a6",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca71d64",
+   "id": "5edfdebc",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163dc850",
+   "id": "20eac746",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63d1ed29",
+   "id": "c419b51a",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69504cec",
+   "id": "f31975d8",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64963f8d",
+   "id": "e1dbd84c",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f9e552",
+   "id": "d0d34587",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c2c348",
+   "id": "36907ca3",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2d4aab",
+   "id": "f94cba7b",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86bb9a8a",
+   "id": "e5c50853",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -375,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee6b18a6",
+   "id": "0bce5098",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c221c8a",
+   "id": "ec801366",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -398,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14ae240",
+   "id": "f48ea14e",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79973fad",
+   "id": "f61c0f8c",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -425,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b1edd36",
+   "id": "0b982cf0",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -439,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f78d665",
+   "id": "193cf83a",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17724158",
+   "id": "ca79ecc8",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -475,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a7518b",
+   "id": "c5fc5582",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "064fc3b1",
+   "id": "1187efe3",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -528,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f10b5cf",
+   "id": "56f2508b",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78729bc6",
+   "id": "549748d6",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -551,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a31ccc2d",
+   "id": "a8c1b895",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ecd572",
+   "id": "c2809778",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -576,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c0ae83",
+   "id": "20aaf23c",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da31437c",
+   "id": "5a9b571b",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -612,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a792dd8",
+   "id": "18499b69",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9c2de6a",
+   "id": "e4fa59b7",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -652,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a6483a",
+   "id": "54932d59",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465d4a06",
+   "id": "d781635e",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -679,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be563f1",
+   "id": "783d7bf0",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a448b02a",
+   "id": "2034e3a5",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -704,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c39e45",
+   "id": "52570aa0",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af4b730",
+   "id": "f88670ae",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -728,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c13fbeab",
+   "id": "68de7a74",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d057c64",
+   "id": "04bd92ae",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -751,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6ab593d",
+   "id": "2da8314a",
    "metadata": {
     "hide-output": false
    },
@@ -762,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b49c4680",
+   "id": "5234d75b",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -773,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323b24c8",
+   "id": "6e9cbcae",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -804,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c6bae0",
+   "id": "2efd3ecf",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd086e48",
+   "id": "3caea1d1",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -838,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42ce840b",
+   "id": "9313f815",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c93ccb5",
+   "id": "1b0eae13",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -860,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaeb2fa7",
+   "id": "b895e1ab",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2fb8432",
+   "id": "e372c00c",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -896,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ddf9dde",
+   "id": "fafc5f41",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff17452",
+   "id": "cbbdd3a4",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -921,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fbf5ca1",
+   "id": "c20a3dcf",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01f8ba2",
+   "id": "860d103b",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -945,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "256cae28",
+   "id": "f75ee998",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f266057c",
+   "id": "e3019172",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -968,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef36cbfc",
+   "id": "3b18111d",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4bd280f",
+   "id": "cfb0a47d",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -989,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da44032c",
+   "id": "cac470fa",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d8df5c",
+   "id": "6179abba",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1009,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5db6d2c1",
+   "id": "d8e4dbd8",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea16af3a",
+   "id": "7afef44b",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1032,7 +1043,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.0364282,
+  "date": 1764309075.1596692,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
