--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acf89917",
+   "id": "58a65593",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e56cd2ea",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1edd63ec",
+   "id": "ead8618b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -62,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "527aad7d",
+   "id": "d094826c",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73e8c3bb",
+   "id": "61c46d89",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -82,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9acc503b",
+   "id": "2779663e",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f38d3b1",
+   "id": "73f52f1e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -106,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ec865e",
+   "id": "4857f86b",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca79ecf",
+   "id": "ef8d5fc9",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -126,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "683bc05d",
+   "id": "0fa9cec9",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa33f979",
+   "id": "1f6c61d8",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -150,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d09bb74a",
+   "id": "f700cc18",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6174b7fa",
+   "id": "d7eb8f4b",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -189,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a3976d",
+   "id": "3df238a8",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0042fdc3",
+   "id": "93fe6a62",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -223,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf4dd9be",
+   "id": "30c41c40",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41edec5b",
+   "id": "9204101e",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -245,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6115f8a",
+   "id": "19aa0d73",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7de694",
+   "id": "a585fcb4",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -272,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb96e90d",
+   "id": "95371918",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d666dc8",
+   "id": "bccabaaf",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -296,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9981eeb",
+   "id": "02b8f810",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d36e37",
+   "id": "fff16999",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -325,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83ed8e20",
+   "id": "39217ce7",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5e17f2",
+   "id": "17a2210b",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -362,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebeed9b1",
+   "id": "48635b8f",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98c2663",
+   "id": "1a20ad3b",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -383,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87fa2e69",
+   "id": "ca3db40d",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5195a9c5",
+   "id": "b3cb6955",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -408,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb5fca5",
+   "id": "99691dc9",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d839ec7c",
+   "id": "623c12be",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -480,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7b92e2",
+   "id": "63d799ea",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d731b4",
+   "id": "93fcc777",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -521,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e855eae",
+   "id": "e06e3327",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02812b67",
+   "id": "31933ab2",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -558,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cedd17b5",
+   "id": "041272a0",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "487fc216",
+   "id": "f8f5c500",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -597,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c1e12e3",
+   "id": "eec09a33",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d05c5b0",
+   "id": "f6c6011e",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -631,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debc8530",
+   "id": "a745c572",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79611b9a",
+   "id": "5df568b5",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -659,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19ae93bc",
+   "id": "73091b1b",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad80a04",
+   "id": "f2f91a5b",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -706,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c41b0aa6",
+   "id": "8fd28831",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "161f0642",
+   "id": "8a6cbcc8",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -729,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d7c8ae",
+   "id": "a551dff8",
    "metadata": {
     "hide-output": false
    },
@@ -754,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebff0764",
+   "id": "7720d155",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -765,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0db6036",
+   "id": "476ca49b",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5d4087",
+   "id": "1e3e2a20",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad2ea7a5",
+   "id": "0c78014b",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -806,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2dc46ae",
+   "id": "9fc06034",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6157d25",
+   "id": "3a86a14f",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f57757f1",
+   "id": "9c41af88",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc0f345",
+   "id": "1e008df8",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -862,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7da74d92",
+   "id": "d8740f39",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be8c259",
+   "id": "50cfaf83",
    "metadata": {
     "hide-output": false
    },
@@ -894,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77218311",
+   "id": "cc4fb20d",
    "metadata": {
     "hide-output": false
    },
@@ -909,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d48b4df",
+   "id": "65f943c9",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -918,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a6b0f6",
+   "id": "48e02683",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09087e3a",
+   "id": "995825e2",
    "metadata": {
     "hide-output": false
    },
@@ -949,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8624b84a",
+   "id": "f8fc7668",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -960,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19b3332",
+   "id": "99080f65",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea2ea91",
+   "id": "f7c1a4e3",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a72770",
+   "id": "7f5bae63",
    "metadata": {
     "hide-output": false
    },
@@ -1010,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af717d5f",
+   "id": "b4755702",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1044,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.0655339,
+  "date": 1764309075.1880064,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
