--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70502eab",
+   "id": "06de518b",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ede9950",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "351a48a8",
+   "id": "14908d45",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b48deee3",
+   "id": "3493d51e",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dcbd981",
+   "id": "93c11063",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5203b248",
+   "id": "15ebd0d7",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81b31e7",
+   "id": "544fdfd9",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -94,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "421f8299",
+   "id": "c62ab16e",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4285e4",
+   "id": "6f58853f",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -120,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdea4f73",
+   "id": "9fccd80d",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d876222",
+   "id": "17c7c9af",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -143,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b925b4",
+   "id": "aeeef964",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3224d393",
+   "id": "3688de0f",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -185,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34ecd416",
+   "id": "a46e939c",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095a2cd7",
+   "id": "97302705",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -232,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d10b7e9f",
+   "id": "2b83291d",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b089229",
+   "id": "b8174d78",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -275,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c84a1a2",
+   "id": "8f175c9e",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e38c849",
+   "id": "1a416430",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1016273c",
+   "id": "bdeba58e",
    "metadata": {
     "hide-output": false
    },
@@ -321,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a3b04f6",
+   "id": "ef29f887",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7133539a",
+   "id": "b1010a5f",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9906b3",
+   "id": "67a89520",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -444,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ca62cf",
+   "id": "f3f37dee",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -508,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06d86ee",
+   "id": "5f7f252f",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -539,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4101ff21",
+   "id": "887392e1",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c97548ca",
+   "id": "706d4feb",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ec2087",
+   "id": "826b6077",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -606,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eddd1adc",
+   "id": "a7cfe121",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a54ae9",
+   "id": "58f1818b",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -638,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feac7caa",
+   "id": "8bda4f3f",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9436ba",
+   "id": "4af35130",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -671,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1e7ebd",
+   "id": "faa52262",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3689872",
+   "id": "4e8fdbf9",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -720,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7dd799",
+   "id": "8b87a0b6",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d50c7383",
+   "id": "d4e15738",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -750,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7abd4127",
+   "id": "5664c8f1",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3941e9af",
+   "id": "245bb96a",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -788,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f116521a",
+   "id": "97529ad3",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1406d754",
+   "id": "106fd797",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c67faed",
+   "id": "efdfd35c",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532704c0",
+   "id": "0df11959",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cca412a",
+   "id": "9deb9bcd",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -894,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "080f97c0",
+   "id": "edbcf8ea",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974023aa",
+   "id": "c685085e",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -931,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd99041",
+   "id": "73bed2c9",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a8421f9",
+   "id": "530f9989",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1006,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b164959",
+   "id": "d5f512d8",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b33cb4b4",
+   "id": "c3b8b72d",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45bcfd8",
+   "id": "244cb13d",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1070,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820ecbcf",
+   "id": "39aa1e7a",
    "metadata": {
     "hide-output": false
    },
@@ -1090,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee68ea2",
+   "id": "aa60abb1",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1099,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "321819b8",
+   "id": "155ea5d0",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba17fc4f",
+   "id": "d1b8671f",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c04c16e",
+   "id": "8d71314f",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb35879a",
+   "id": "0983ca40",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1172,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57b7b10a",
+   "id": "0f0b197b",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32498c17",
+   "id": "c74219fb",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1206,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fef6f0",
+   "id": "7180445a",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1217,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "068657ed",
+   "id": "bdfe2dc5",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd41ac2",
+   "id": "83775cc5",
    "metadata": {
     "hide-output": false
    },
@@ -1248,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0483d72",
+   "id": "d136d1a7",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b81a47f7",
+   "id": "7f020f0d",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1275,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99446bb",
+   "id": "9511e81e",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f91ecb7",
+   "id": "85747b1a",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1309,7 +1320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e010ff3a",
+   "id": "470a6052",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1317,7 +1328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "519b9eac",
+   "id": "51d2e687",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1335,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fe1eaa8",
+   "id": "d1a24c21",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77bc1dcb",
+   "id": "42d58ad4",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1380,7 +1391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9baa24de",
+   "id": "c355d446",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1389,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a85c6be",
+   "id": "cd8c81c0",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf8f8dcc",
+   "id": "6156867b",
    "metadata": {
     "hide-output": false
    },
@@ -1414,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd232536",
+   "id": "7e5e0353",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1423,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a0f6ba",
+   "id": "ff72b6c5",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b3b177",
+   "id": "78f88b31",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1444,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe19557",
+   "id": "2c233e71",
    "metadata": {
     "hide-output": false
    },
@@ -1458,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9409553c",
+   "id": "f99427fa",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1467,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f2e0c3",
+   "id": "4f1855c9",
    "metadata": {
     "hide-output": false
    },
@@ -1485,7 +1496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c65c3e",
+   "id": "862d18ad",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1498,7 +1509,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.1217606,
+  "date": 1764309075.241252,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
