--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2acd1cfe",
+   "id": "64902445",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ff08d7a",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f3ed9ea",
+   "id": "e5d0dc23",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42786a4f",
+   "id": "138d5154",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84201dc",
+   "id": "81d853ac",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2794fd7",
+   "id": "4556f2de",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e81e052",
+   "id": "99848aca",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f261bbde",
+   "id": "56845bbb",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "519b6e3b",
+   "id": "ff16c786",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647b4242",
+   "id": "dd3bd9e7",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2df6f807",
+   "id": "36c5b018",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70224bbe",
+   "id": "1080b41f",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82793530",
+   "id": "9d308037",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34ce1ee2",
+   "id": "b357e418",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f186b5",
+   "id": "c9f4610f",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "014d3db1",
+   "id": "224a4b13",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d1300a9",
+   "id": "ed35e7c9",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92ee9960",
+   "id": "31e83638",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c5b2a1",
+   "id": "8ee1810b",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -264,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a239792",
+   "id": "e3429419",
    "metadata": {
     "hide-output": false
    },
@@ -276,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61592f6",
+   "id": "fc136028",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -286,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5630c44",
+   "id": "a4142783",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -294,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d448360",
+   "id": "4a2d4bd7",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -318,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ab11e7",
+   "id": "b107fa65",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "382c0155",
+   "id": "8e337cde",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -440,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a102f2b1",
+   "id": "687d53b9",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ad011a",
+   "id": "79c2bed7",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -479,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c123d26d",
+   "id": "58233353",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d54bfd",
+   "id": "4597b23b",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -523,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "912b5ae9",
+   "id": "efbcdca3",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d329b07",
+   "id": "b1fb66fe",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -553,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ee2660",
+   "id": "7478958d",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb589497",
+   "id": "4b28ea8b",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -573,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3613fee8",
+   "id": "e0d92e9d",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54515145",
+   "id": "6846a3f6",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -594,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15965b6f",
+   "id": "3681cc2a",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c64310dc",
+   "id": "be021954",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df9750a",
+   "id": "9f509d49",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -627,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f88addb",
+   "id": "bab0f812",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +649,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.142277,
+  "date": 1764309075.2612257,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
