--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "018fb171",
+   "id": "96b55fa0",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e07ea3",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -19,8 +30,8 @@
     "|intro|2025-11-17 03:38|cache|0.92|✅|\n",
     "|inventory_dynamics|2025-11-17 03:38|cache|8.76|✅|\n",
     "|inventory_ssd|2025-11-17 03:38|cache|9.55|✅|\n",
-    "|jax_intro|2025-11-17 03:39|cache|38.01|✅|\n",
-    "|jax_nn|2025-11-17 03:41|cache|91.42|✅|\n",
+    "|jax_intro|2025-11-28 05:49|cache|28.2|✅|\n",
+    "|jax_nn|2025-11-28 05:50|cache|35.4|✅|\n",
     "|job_search|2025-11-17 03:41|cache|10.18|✅|\n",
     "|keras|2025-11-17 03:41|cache|26.62|✅|\n",
     "|kesten_processes|2025-11-17 03:41|cache|11.47|✅|\n",
@@ -48,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c73767c9",
+   "id": "6f4a27c5",
    "metadata": {
     "hide-output": false
    },
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4cdba9",
+   "id": "04defcc3",
    "metadata": {},
    "source": [
     "and the following package versions"
@@ -68,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2ed3a3",
+   "id": "8f8e00dc",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106fe403",
+   "id": "88d8b161",
    "metadata": {},
    "source": [
     "You can check the backend used by JAX using:"
@@ -88,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8075d0cb",
+   "id": "5e53a267",
    "metadata": {
     "hide-output": false
    },
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca632428",
+   "id": "ebe8794a",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -110,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0da5e6f1",
+   "id": "b0ea16fa",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +132,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.164012,
+  "date": 1764309075.2817202,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
