--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75cc1769",
+   "id": "ed5e996b",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8db8ae6f",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1947155f",
+   "id": "a5507497",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec331619",
+   "id": "948601fa",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad7e817",
+   "id": "561e4616",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -64,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dcfb6d9",
+   "id": "025b5fa8",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6311bf79",
+   "id": "4beccc68",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -91,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac8f342",
+   "id": "007e87e3",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320807b7",
+   "id": "fda5bd17",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -163,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1064496e",
+   "id": "57955879",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29bfc34e",
+   "id": "fcdf5e31",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -182,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74edda79",
+   "id": "a10ec0c7",
    "metadata": {
     "hide-output": false
    },
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d9b3e0",
+   "id": "13a1ff77",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -237,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3899a61c",
+   "id": "cfdf0cf9",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2498239a",
+   "id": "9b41c9bb",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -265,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3e76a7",
+   "id": "dd964139",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f06fb952",
+   "id": "d7107a98",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -298,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9020edd1",
+   "id": "42d919ad",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bce6857",
+   "id": "0c85ed43",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -335,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7817a1",
+   "id": "d75616a3",
    "metadata": {
     "hide-output": false
    },
@@ -352,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7aa94908",
+   "id": "033a2f83",
    "metadata": {
     "hide-output": false
    },
@@ -365,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb40c7a8",
+   "id": "e093c001",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -381,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14236ee4",
+   "id": "ab76a91f",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ab63c7",
+   "id": "4234e610",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -435,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04301ab6",
+   "id": "d944af12",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c839fbd1",
+   "id": "53cf4167",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -464,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ad23d5",
+   "id": "467412e6",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362197cf",
+   "id": "7641cc55",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -490,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fb93eb4",
+   "id": "5be9e334",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6b21102",
+   "id": "99a2b8a2",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -540,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b76036c3",
+   "id": "1d3b5959",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a102118c",
+   "id": "264d1ab2",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb3f4ae",
+   "id": "f4d8e8ca",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a10712b9",
+   "id": "e18e63cb",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -599,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e37e5a",
+   "id": "bff18fdd",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb6bf6a",
+   "id": "194f23f5",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28a57340",
+   "id": "3808bd45",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc812350",
+   "id": "b2a35dea",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca4b5c06",
+   "id": "aa5f290c",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd6f2d3",
+   "id": "5269e4d3",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -730,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be3e0f23",
+   "id": "09921768",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee69c341",
+   "id": "c6a8bc8d",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -768,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d931f8d3",
+   "id": "9d6d8013",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -789,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb387285",
+   "id": "97d4a609",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99f3c639",
+   "id": "9d7bdef9",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -817,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c4b488",
+   "id": "9944f3f5",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c33dd0ff",
+   "id": "8c2f1336",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc366fc9",
+   "id": "00a2b715",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc99e670",
+   "id": "7d555397",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "967091a8",
+   "id": "ebba9d57",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f12b2e0",
+   "id": "93ea61e2",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -911,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18409ef1",
+   "id": "580a3f6f",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2da773f",
+   "id": "933f3daf",
    "metadata": {
     "hide-output": false
    },
@@ -941,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135f2861",
+   "id": "d01e7bd7",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "903e4e8f",
+   "id": "1fa4a4e9",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a003d9ef",
+   "id": "778a1e63",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -973,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9656408e",
+   "id": "4e99a153",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -985,7 +996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01930acd",
+   "id": "e310039f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
@@ -996,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2798830f",
+   "id": "51aef477",
    "metadata": {
     "hide-output": false
    },
@@ -1017,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ca8bde",
+   "id": "178e0b35",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "763d8f41",
+   "id": "45572936",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cd2c874",
+   "id": "f5e0dabf",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d16ba8",
+   "id": "54c4753b",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1080,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e8a6745",
+   "id": "eeafdfd2",
    "metadata": {
     "hide-output": false
    },
@@ -1091,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f68eac",
+   "id": "0c73a525",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1100,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f29899d8",
+   "id": "d0d9f791",
    "metadata": {
     "hide-output": false
    },
@@ -1112,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87e02278",
+   "id": "5f6610d9",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1122,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0f4c451",
+   "id": "10d3fa83",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
@@ -1133,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d56107a3",
+   "id": "a47bb25f",
    "metadata": {
     "hide-output": false
    },
@@ -1158,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34a6b9ba",
+   "id": "4e823159",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1169,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1648e028",
+   "id": "f031a098",
    "metadata": {
     "hide-output": false
    },
@@ -1184,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed14aad9",
+   "id": "332a4346",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1192,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc28508",
+   "id": "9bbd5455",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1205,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8f10dab",
+   "id": "f6a57bed",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6fcddea",
+   "id": "d56582ad",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1226,7 +1237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9afed2c",
+   "id": "392f16ad",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.3](https://jax.quantecon.org/#wd_ex3)\n",
@@ -1237,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60647b1f",
+   "id": "3b8cc4a4",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0278d02",
+   "id": "c64c214f",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3417412b",
+   "id": "01aac3ca",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1301,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "506e770c",
+   "id": "e9476808",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.4](https://jax.quantecon.org/#wd_ex4)\n",
@@ -1314,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da1cde7e",
+   "id": "7e88b8af",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1364,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.2015343,
+  "date": 1764309075.3185139,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
