--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40eefea8",
+   "id": "42ebb3a3",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d8bd364",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67acb1c8",
+   "id": "b3b7438d",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.2081196,
+  "date": 1764309075.3251374,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
