--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3af3814e",
+   "id": "7bf94d43",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d016f483",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f911bfb3",
+   "id": "fad113ad",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aee8a0b6",
+   "id": "69bc11a8",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a503c1d0",
+   "id": "f9b9bba0",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d5eac72",
+   "id": "175b42dc",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a192409",
+   "id": "408e30d7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -115,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4113d4d6",
+   "id": "10088fac",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8759800b",
+   "id": "c51576eb",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -135,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12304d76",
+   "id": "980b2991",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31fa7cd3",
+   "id": "79ab43a9",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -156,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2049f8a0",
+   "id": "a796963a",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -198,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470e8869",
+   "id": "0456bf74",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -241,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "927ae4f1",
+   "id": "59fba7ec",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -273,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fde2d5",
+   "id": "d4da917c",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -303,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc12f137",
+   "id": "a058331c",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -314,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea24505",
+   "id": "9e23ed48",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -410,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27738294",
+   "id": "734a2fd9",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -435,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc7ccb99",
+   "id": "5e64a82c",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -481,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c24e221b",
+   "id": "10bc2c3a",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77d5f37",
+   "id": "2a9d2855",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "426e3fc3",
+   "id": "61a22601",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -551,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3145c29b",
+   "id": "16ffdce1",
    "metadata": {
     "hide-output": false
    },
@@ -564,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75afe2aa",
+   "id": "505855fe",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -574,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69bb43b2",
+   "id": "7648ec97",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746c3bb0",
+   "id": "e92a957d",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -618,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71795a35",
+   "id": "c122f0f8",
    "metadata": {
     "hide-output": false
    },
@@ -649,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb66e89",
+   "id": "2eb95b52",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab1bebb",
+   "id": "fcff59e2",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47897e49",
+   "id": "cf3c1ceb",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a84d82e",
+   "id": "b6f79c49",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -729,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b50903cc",
+   "id": "a7864387",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb0e9ab",
+   "id": "e0e31f6b",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -753,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed33816a",
+   "id": "986dcb75",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f096ba86",
+   "id": "ae7b4983",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -784,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06861ba4",
+   "id": "e7e9c5db",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c040d7",
+   "id": "903e2d1f",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -842,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff2baf3",
+   "id": "69c0a9cb",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5984a29",
+   "id": "b5809582",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d0362c1",
+   "id": "30d8fcfe",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -875,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7148c24",
+   "id": "16ae660c",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5df14900",
+   "id": "9591bb4d",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -897,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2a09a6",
+   "id": "d12f293e",
    "metadata": {
     "hide-output": false
    },
@@ -970,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d0c945",
+   "id": "5efb08c1",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1036,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5201a46",
+   "id": "f0cc84b4",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1044,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1705cd87",
+   "id": "80a0ff87",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1057,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27311740",
+   "id": "2109477d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1068,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7a7f01",
+   "id": "63f0b991",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1091,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fb397d2",
+   "id": "798ea91c",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1089,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dc3acf0",
+   "id": "ef9a5d63",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d719d8e5",
+   "id": "582a25bf",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1134,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619e8e04",
+   "id": "8daa461e",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61220b9",
+   "id": "edd1f4e8",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1163,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f37f75",
+   "id": "020e91cb",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81d862cc",
+   "id": "a8ab4959",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1199,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45029c2",
+   "id": "a41f0ba7",
    "metadata": {
     "hide-output": false
    },
@@ -1218,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2f00a4",
+   "id": "150b516c",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1274,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.5110428,
+  "date": 1764309074.6508248,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
