--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e49cb76",
+   "id": "548ea9e3",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa5281d1",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a150888",
+   "id": "3ad3a46c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06a9de0e",
+   "id": "12813fb2",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c48d780b",
+   "id": "240628d7",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c1e9b52",
+   "id": "085c9ea6",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "012e7f5e",
+   "id": "fb2fa185",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0d61ee",
+   "id": "4aa46584",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8aefb38",
+   "id": "b1a30f25",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d20fa5",
+   "id": "2fa7840b",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +186,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-eacb438b-5dc4-4934-8279-fb5c94dd0f35'></a>\n",
+    "<a id='equation-4e9fea72-f271-4155-89d3-da9503286c25'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +199,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-cad39938-363b-43ca-80c5-0ec8ba209df9'></a>\n",
+    "<a id='equation-3ca74e6e-e294-4722-a819-88347551cc5b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b049366c",
+   "id": "b01578f8",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +253,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-5e9f8c53-e8a0-41ec-bef9-21c3bcfe776e'></a>\n",
+    "<a id='equation-773bd991-5793-48f4-9bf2-95148caa032a'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +263,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-323fd0c8-9388-4e44-8312-aa5e40545249'></a>\n",
+    "<a id='equation-7dea60ee-1714-48ac-9e5e-87a9f8ece1a3'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +277,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-9b548f24-4df7-4d3e-b0e7-93d42dc49196'></a>\n",
+    "<a id='equation-ae5ef8cd-b287-49a6-8a75-df8eecd0f040'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +287,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-9cab7cac-19e4-4d4a-a5ef-fa69874f0bce'></a>\n",
+    "<a id='equation-b0e52895-7abc-42b5-a9ab-cfc9bfad78b3'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb4be22",
+   "id": "bcb2230e",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +312,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-f54186a5-339a-4b8d-b9f8-625757f52037'></a>\n",
+    "<a id='equation-06cd49c5-d19d-451d-bda1-8789d95564ca'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +324,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-be4fb7a0-4594-4851-97ff-396efee9d466'></a>\n",
+    "<a id='equation-2ecfce19-e984-49ca-9aaf-9c8764ae9667'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0bbace",
+   "id": "37607b69",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "140b083e",
+   "id": "cef6d631",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607475f7",
+   "id": "5ee3c77b",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "204c73df",
+   "id": "682fef91",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97108dd8",
+   "id": "626586b0",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "517abbf5",
+   "id": "4f398d3a",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d9b035",
+   "id": "52e339fa",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179beca7",
+   "id": "993e51c7",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4038e1be",
+   "id": "ff361d70",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee3e00c",
+   "id": "d8ce91f8",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ea91a2",
+   "id": "3d9d1d72",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b6045d",
+   "id": "c77484c0",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99814bc4",
+   "id": "da32f300",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85989eb1",
+   "id": "94b53fda",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534b3774",
+   "id": "36457306",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9ad0a0",
+   "id": "900a35d4",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abca9810",
+   "id": "52811ba4",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49447435",
+   "id": "dc44e89d",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a5c8515",
+   "id": "3f683f4e",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6011264a",
+   "id": "e1aa6950",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b84afbe1",
+   "id": "5bb46154",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc8cf14",
+   "id": "51925540",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "802ae8b3",
+   "id": "071d4737",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87ce24d",
+   "id": "e561da78",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a059d7",
+   "id": "c1f7a478",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb46150",
+   "id": "8704abe9",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b9eccc",
+   "id": "0d834bad",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41bd79e",
+   "id": "bcc6fdc9",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b87873f2",
+   "id": "50617c94",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e90c68d",
+   "id": "d038a8ef",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dddccc4a",
+   "id": "930bc713",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01296960",
+   "id": "82f559fc",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "792b5c36",
+   "id": "813cfe9c",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a289183",
+   "id": "48209ec0",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9517395",
+   "id": "f28cf8d2",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be25e5da",
+   "id": "376e1033",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88bd8cb1",
+   "id": "533a7616",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "022729e9",
+   "id": "4729d835",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -993,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c75dcf53",
+   "id": "e2283fa2",
    "metadata": {
     "hide-output": false
    },
@@ -1004,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4a11ca",
+   "id": "2be86005",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1015,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a34865f7",
+   "id": "7db052ce",
    "metadata": {
     "hide-output": false
    },
@@ -1039,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9e9af1",
+   "id": "500b661b",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1049,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ace3ea",
+   "id": "64cf4221",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1060,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2df2a0a",
+   "id": "a9cee27b",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48f22ae5",
+   "id": "81ce0965",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1082,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "393478ea",
+   "id": "641f3016",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "232acb82",
+   "id": "bc1573d2",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1104,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb950ff0",
+   "id": "90f5e85d",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc351a8c",
+   "id": "2278e4dc",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1124,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf65b2f1",
+   "id": "5c878865",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330f0731",
+   "id": "bba50739",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1149,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0fe1eb0",
+   "id": "bd50233d",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa4a827",
+   "id": "110f3f7a",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6700ba",
+   "id": "572da94f",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1229,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f67c33",
+   "id": "8612a72c",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7a4922",
+   "id": "b694c4e1",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1255,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "757ecc65",
+   "id": "895b3f9a",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda101cd",
+   "id": "f3581893",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1284,7 +1295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5500bfc",
+   "id": "dd019619",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1299,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcde874e",
+   "id": "4aba583b",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e34003",
+   "id": "0e0414b7",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1324,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "574a397e",
+   "id": "bd325a02",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1333,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50319fce",
+   "id": "232ad531",
    "metadata": {
     "hide-output": false
    },
@@ -1349,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c59bad",
+   "id": "ea8398ec",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1359,7 +1370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e380a1c",
+   "id": "42d93663",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1374,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53ab36e5",
+   "id": "80436563",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27101c08",
+   "id": "321baea2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1394,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139ec683",
+   "id": "25631ff0",
    "metadata": {
     "hide-output": false
    },
@@ -1418,7 +1429,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.5830722,
+  "date": 1764309074.7166748,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
