--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e72071d7",
+   "id": "c1731588",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd9902d",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "804219c4",
+   "id": "4b58b1f0",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1c5a5b",
+   "id": "634fba03",
    "metadata": {
     "hide-output": false
    },
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c3eb7f7",
+   "id": "e731ec62",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -57,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f51053d7",
+   "id": "20592060",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eccbab3",
+   "id": "bca74c8e",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a773c9",
+   "id": "b1f5eb4e",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "815b845f",
+   "id": "bd03850e",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -137,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7d162c8",
+   "id": "054250c6",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -148,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0369e1",
+   "id": "29c49f41",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b7f930",
+   "id": "71fe7bb1",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -168,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8a2617",
+   "id": "e8db578d",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "410a5aa9",
+   "id": "45168c2a",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -198,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65970fa7",
+   "id": "7b9e64e0",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c103fdf",
+   "id": "1751d92a",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15506d4f",
+   "id": "13955874",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b2b0ca",
+   "id": "cb48be24",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda80774",
+   "id": "b3e4a559",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -254,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e06f78a8",
+   "id": "702a4afa",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "966a140c",
+   "id": "46bbceee",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -301,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6933faf",
+   "id": "11afda7b",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "603daf6e",
+   "id": "61f79a7b",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -328,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f22341fc",
+   "id": "38e1764e",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eebce85",
+   "id": "ee454cbc",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -365,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7819dc9",
+   "id": "3266d8d3",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4242ef1f",
+   "id": "e3783a1c",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -388,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee29eed4",
+   "id": "7521649f",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49927545",
+   "id": "b5e237fd",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -412,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd698a3e",
+   "id": "a9fd66d4",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9539570a",
+   "id": "d387f690",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7d52a58",
+   "id": "0438bd05",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab42751b",
+   "id": "7421203c",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -457,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d56ccd",
+   "id": "e71c1e81",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9733a85",
+   "id": "83edb028",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3cb864",
+   "id": "3e3a0600",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -517,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c450098",
+   "id": "2e7edf0a",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e400adf9",
+   "id": "6c14ccb3",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -550,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90486456",
+   "id": "00be22c3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -559,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2ba859",
+   "id": "47eb9fe4",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "836b85b9",
+   "id": "39890a46",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -647,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2afb698",
+   "id": "bfc064d7",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e745b6",
+   "id": "8342d0a1",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e947c13a",
+   "id": "cc264bb3",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -692,7 +703,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.7802517,
+  "date": 1764309074.910957,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
