--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a9e6a74",
+   "id": "6cbc9cb8",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "645b560e",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ace091",
+   "id": "e6e394e2",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed458122",
+   "id": "44253eac",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f051ac57",
+   "id": "05a0bbcc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7c864c",
+   "id": "c4bc5dd9",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d44c508",
+   "id": "d1d8ab9e",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62349245",
+   "id": "1e0668cc",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -117,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb8a7cc1",
+   "id": "75027324",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22aea77b",
+   "id": "64a9c182",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8695fd56",
+   "id": "b7ee64f7",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -210,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7b9332",
+   "id": "30a8fb6f",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f98dcb",
+   "id": "c7918f75",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -287,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82cccbd0",
+   "id": "db95eb37",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f97aa09",
+   "id": "a6d19e02",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -352,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03cbd47b",
+   "id": "371c4efa",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -368,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63737e99",
+   "id": "0809b9bd",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -418,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc9c9a1e",
+   "id": "67e48814",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -480,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e09d7e1",
+   "id": "38f60c76",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -508,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f5937f",
+   "id": "5afda73f",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -523,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec3ac066",
+   "id": "2e465ce3",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5d839a",
+   "id": "0abc3b51",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -566,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a03753",
+   "id": "00eeecb2",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa1b17fd",
+   "id": "b0c68082",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -603,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d4bc95c",
+   "id": "4da38cdc",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b88887",
+   "id": "5a19e21b",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -641,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c039670",
+   "id": "ad5cc559",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6279b11",
+   "id": "03f90f77",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100b8ca8",
+   "id": "77e3368b",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0127c283",
+   "id": "ad174e22",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -706,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43c39cf",
+   "id": "f3297b79",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -717,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0321dd9",
+   "id": "7ad71a32",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81ef64f",
+   "id": "fec111ad",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -764,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19f6c2a1",
+   "id": "da1f7660",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04001bf",
+   "id": "4361f825",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -790,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e280105",
+   "id": "b45fd9fd",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ca2ea7c",
+   "id": "48b138bf",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -819,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44cfa60a",
+   "id": "3b0135cd",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f224eb60",
+   "id": "4ebe5896",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -858,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5300f7dd",
+   "id": "fdbf33a5",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d386804",
+   "id": "78e08534",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -893,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44b24b0",
+   "id": "67a64797",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "645cd2d7",
+   "id": "e19ac78e",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802bb4cd",
+   "id": "205b10c3",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -938,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c53cb0",
+   "id": "930ed85b",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78b89809",
+   "id": "ba9c12f5",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -965,7 +976,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2906393e",
+   "id": "db29e7c6",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -977,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78b28fdc",
+   "id": "e7204a26",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -986,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b87d9ab",
+   "id": "7a1970c1",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1020,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.8721476,
+  "date": 1764309074.9994717,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
