--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "717f2448",
+   "id": "f626f3ab",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "525e8dd3",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d852c5de",
+   "id": "cca3e407",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "847e7223",
+   "id": "d5ab2899",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fef5f366",
+   "id": "8a9d84a7",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb3b2e4",
+   "id": "2f348738",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4d4c838",
+   "id": "5f3248b8",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c290b91f",
+   "id": "de536e36",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ddb952d",
+   "id": "1e8f6037",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce7d4b7",
+   "id": "74a18756",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -118,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e09f3585",
+   "id": "fcba57ee",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e8f983b",
+   "id": "24eb1d51",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -181,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c92c7025",
+   "id": "de43a437",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -239,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505c424d",
+   "id": "33462235",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf11cd6",
+   "id": "3bb7707a",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -450,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64e21b42",
+   "id": "caa031f8",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -463,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db92f9c4",
+   "id": "531dfe31",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9636811",
+   "id": "b6adfd93",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -506,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f368f2d",
+   "id": "db791c9a",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ec5a8c",
+   "id": "02089091",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -541,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4efb68b0",
+   "id": "58f42e6c",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3caec5a1",
+   "id": "f2fa9e46",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -582,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69f2653b",
+   "id": "57678c69",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df3d0f91",
+   "id": "ca342256",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -612,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bd7ab30",
+   "id": "670d849f",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d14f113",
+   "id": "80f734cd",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -641,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1c95c6",
+   "id": "4fc8179a",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4def9391",
+   "id": "2cb13ad3",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -664,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17e9725",
+   "id": "055a5e63",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "750a8615",
+   "id": "5b8a6a34",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -710,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38434a77",
+   "id": "86b4a619",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e8381c5",
+   "id": "d70096ac",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -748,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6971d564",
+   "id": "b4ec5302",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -894,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e6be6b",
+   "id": "22530cc7",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -915,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f634b9",
+   "id": "5e95a4ed",
    "metadata": {
     "hide-output": false
    },
@@ -960,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1704a907",
+   "id": "6df95cb0",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -969,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53b7ab10",
+   "id": "d6f1ee2d",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476410e8",
+   "id": "8d66ec22",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1007,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46fd11ef",
+   "id": "4d5abe84",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd0bbd0",
+   "id": "aecce730",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1059,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27a142d4",
+   "id": "0b810dc1",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ad42c8",
+   "id": "352e552f",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1080,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9ab0a4",
+   "id": "c0bbff61",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c703c6db",
+   "id": "1270b475",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1103,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6cd889",
+   "id": "8a5a5c5a",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d60727e",
+   "id": "1c4fc215",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1126,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe6f5bb",
+   "id": "fd66a608",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6f96236",
+   "id": "08598318",
    "metadata": {
     "hide-output": false
    },
@@ -1160,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b47a1ded",
+   "id": "81b531f7",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3023fc23",
+   "id": "01652e77",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1189,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "548ec0b3",
+   "id": "b57dca5e",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e80895f",
+   "id": "6e540c1d",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1226,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d8e327",
+   "id": "b5be0e7e",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffc0007c",
+   "id": "6670ee2b",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1264,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8db964c",
+   "id": "77bc12a7",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0cd0304",
+   "id": "a37388af",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1312,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9568795",
+   "id": "5612099e",
    "metadata": {
     "hide-output": false
    },
@@ -1325,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b384ea5e",
+   "id": "256c12af",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa20bd6d",
+   "id": "43ff4f01",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1348,7 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d156d4",
+   "id": "aa5ce40f",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10290386",
+   "id": "36ca33f4",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1371,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fea1e6",
+   "id": "e9fb22a1",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6fb9fb4",
+   "id": "0059a64c",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1394,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1e1c4fc",
+   "id": "9ed47ad7",
    "metadata": {
     "hide-output": false
    },
@@ -1405,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76fc3b8",
+   "id": "a74fe911",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1414,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ec51387",
+   "id": "717aeeef",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8ea99c1",
+   "id": "afe30a52",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1444,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75be967c",
+   "id": "eadeaed4",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31550c48",
+   "id": "052d7684",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1482,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da5c9f52",
+   "id": "1c1c1ed8",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "421f89ed",
+   "id": "c110ace3",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1513,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b8ff706",
+   "id": "2e9d1c3c",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15e32e6e",
+   "id": "32f2532a",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1534,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c194320",
+   "id": "3f2e7c07",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "640f2b62",
+   "id": "b2260ea2",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1557,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "353dd35e",
+   "id": "d98f1ebd",
    "metadata": {
     "hide-output": false
    },
@@ -1571,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c0c148",
+   "id": "5080aab5",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1580,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd5a06c",
+   "id": "5c37d230",
    "metadata": {
     "hide-output": false
    },
@@ -1591,7 +1602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "443b53f0",
+   "id": "800df7dc",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1600,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25ca8615",
+   "id": "650391f7",
    "metadata": {
     "hide-output": false
    },
@@ -1611,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "387018a5",
+   "id": "fc76244d",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1622,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f82eaa75",
+   "id": "299e931a",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b822e31d",
+   "id": "d466401d",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1650,7 +1661,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689794.9258094,
+  "date": 1764309075.0490365,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
