--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e5a77d28",
+   "id": "92d79b76",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54a1f408",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a650986a",
+   "id": "09bab77b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb1565b",
+   "id": "7c3cfb29",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb6b916d",
+   "id": "ce3777fa",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cda9d69",
+   "id": "667346ec",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fed0f7d",
+   "id": "c7a763ae",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5aee437",
+   "id": "ede188ce",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0855d095",
+   "id": "a0fbe6cc",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c22c2679",
+   "id": "17dffb74",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de1c172",
+   "id": "be451316",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -148,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ca9830",
+   "id": "cbc3a8a2",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b567a0",
+   "id": "ea448229",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -198,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb1b5294",
+   "id": "87c6ddc0",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d9f3f7",
+   "id": "a6f60378",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -249,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a9dad02",
+   "id": "32b6df07",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab04245",
+   "id": "3c807db8",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -290,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17e4a08",
+   "id": "0749c281",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b74bf650",
+   "id": "6f7254c4",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -314,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55984716",
+   "id": "6407413c",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58816c54",
+   "id": "8969029b",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -338,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c02af458",
+   "id": "49008fb7",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c801bee",
+   "id": "dd231d4c",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -412,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac433d68",
+   "id": "ca3ec428",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d6ec7a5",
+   "id": "f488f9a5",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -450,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70aa7de0",
+   "id": "dd711d96",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7815e20",
+   "id": "c568d2bd",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -484,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e57a48",
+   "id": "ed42b796",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81d7ec1",
+   "id": "fcca685d",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -521,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a39f437",
+   "id": "c26c267e",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d5982a",
+   "id": "f2895956",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -551,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adef9851",
+   "id": "906d9462",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55a7387f",
+   "id": "7103afca",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -579,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88cd5f73",
+   "id": "5d423883",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9aea15e",
+   "id": "69debb56",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -626,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95993fc9",
+   "id": "3c6eacc0",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ddf2f4a",
+   "id": "f7ec4bae",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -649,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd80a225",
+   "id": "bbfdaeaf",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b921ef4",
+   "id": "0bcee970",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82b18f7",
+   "id": "d4e965a2",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e75fe9b",
+   "id": "1b45889a",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a993243",
+   "id": "9c7f4bfb",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -729,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b79306b",
+   "id": "1ac2ff6c",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ca0dea8",
+   "id": "14772d3d",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f3df76f",
+   "id": "07fdb8ca",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +786,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e8058b",
+   "id": "caa42d4d",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -784,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ff7f0d",
+   "id": "b09aee86",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28ef823",
+   "id": "4d35516f",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20e86235",
+   "id": "77fd0107",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9fcad5f",
+   "id": "b0086c39",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -839,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3a95bbd",
+   "id": "c39873d3",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a444faf3",
+   "id": "c2f9cde0",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -866,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7003f780",
+   "id": "9f7bef12",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e200e3f",
+   "id": "1904559b",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7bf154a",
+   "id": "f4ae9628",
    "metadata": {
     "hide-output": false
    },
@@ -907,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654c47c7",
+   "id": "1df05640",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d338ce9f",
+   "id": "c3ffcfcb",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42625129",
+   "id": "101605d6",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74ed7070",
+   "id": "af737f90",
    "metadata": {
     "hide-output": false
    },
@@ -978,7 +989,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.0062187,
+  "date": 1764309075.130474,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
