--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a527e1d5",
+   "id": "f06aabd4",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\newcommand{\\argmax}{arg\\,max}\n",
+    "\\newcommand{\\argmin}{arg\\,min}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e034c19",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d8a051",
+   "id": "82af25d7",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -21,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a53ad00",
+   "id": "5f7a80a6",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1714073",
+   "id": "b3334c68",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -80,7 +91,7 @@
   }
  ],
  "metadata": {
-  "date": 1763689795.1680565,
+  "date": 1764309075.2860808,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
